ADD: QuaffItem check; FFT: Upgrade to java 19; CLN: Remove many warnings from upgrade